drupal/sites/all/themes/custom/nas/css/app.css
/* ... */
.page-boa-bird .bird-guide-section.right-col {
  padding-left: 30px;
}
@media only screen and (max-width: 479px) {
  .page-boa-bird .bird-guide-section.right-col {
    padding-left: 0;
    padding-right: 0;
  }
}
.page-boa-bird .bird-guide-card {
  padding: 0 25px 0 25px;
  position: relative;
  z-index: 2;
}
.page-boa-bird .bird-guide-card .bird-guide-header {
  padding-bottom: 20px;
  margin-bottom: -10px;
}
.page-boa-bird .bird-guide-card .plate-name {
  color: #F15936;
  font-size: 22px;
  margin: 16px 0 -10px;
}
.page-boa-bird .bird-guide-card .common-name {
  margin-top: 0;
}
.page-boa-bird .boa-plate-illustration {
  padding-bottom: 25px;
  padding-right: 10px;
}
.page-boa-bird .boa-plate-illustration .see-full-plate {
  font-family: "Source Sans Pro", Verdana, sans-serif;
  font-size: 18px;
}
.page-boa-bird .boa-plate-illustration .see-full-plate i {
  font-size: 23px;
}
.page-boa-bird .boa-social-sharing {
  padding-right: 10px;
}
@media only screen and (max-width: 479px) {
  .page-boa-bird .boa-social-sharing {
    text-align: center;
  }
}
@media only screen and (min-width: 480px) and (max-width: 600px) {
  .page-boa-bird .boa-social-sharing {
    text-align: center;
  }
}
@media only screen and (min-width: 601px) and (max-width: 767px) {
  .page-boa-bird .boa-social-sharing {
    text-align: center;
  }
}
.page-boa-bird .boa-in-the-bird-guide {
  padding-bottom: 35px;
  padding-right: 10px;
}
.page-boa-bird .boa-in-the-bird-guide .bird-card {
  margin-left: auto;
  margin-right: auto;
}
@media only screen and (min-width: 768px) {
  .page-boa-bird .boa-in-the-bird-guide .bird-card {
    margin-right: 10px;
  }
}
.page-boa-bird .boa-in-the-bird-guide h2 {
  font-size: 28px;
  margin-bottom: 10px;
  text-align: center;
  white-space: nowrap;
}
@media only screen and (min-width: 768px) {
  .page-boa-bird .boa-in-the-bird-guide h2 {
    text-align: left;
  }
}
.page-boa-bird .boa-in-the-news {
  padding-right: 10px;
}
.page-boa-bird .boa-in-the-news .editorial-card {
  margin-right: 10px;
}
.page-boa-bird .boa-in-the-news h2 {
  font-size: 28px;
  margin-bottom: 10px;
}
@media only screen and (max-width: 479px) {
  .page-boa-bird .boa-in-the-news h2 {
    text-align: center;
  }
}

.blocks-events .more-events {
  font-family: "Source Sans Pro", Verdana, sans-serif;
}

.title-h1 {
  font-weight: 300;
  font-size: 52px;
  line-height: 65px;
}

.content-bird {
  font-weight: 300;
  font-size: 24px;
  line-height: 27px;
}

.blocks-events {
  padding: 50px 0 80px;
}
.blocks-events .title-block {
  font-size: 30px;
  line-height: 32px;
  font-weight: 300;
  border-bottom: 1px solid #d4d4d4;
  padding-bottom: 35px;
}
.blocks-events article {
  margin-top: 35px;
}
.blocks-events article .title-article {
  font-size: 24px;
  font-weight: normal;
  line-height: 1.1;
  margin-bottom: 20px;
  letter-spacing: .1px;
}
.blocks-events article .title-article span {
  display: block;
  font-size: 16px;
}
.blocks-events article .content-article {
  font-size: 14px;
  line-height: 19px;
}
.blocks-events article .content-article .more-link {
  display: table;
  position: relative;
  padding-right: 10px;
  color: #0aa8e3;
}
.blocks-events article .content-article .more-link:after {
  content: "";
  display: block;
  right: 0px;
  top: 50%;
  margin-top: -3px;
  position: absolute;
  width: 7px;
  height: 7px;
  background: url("../img/duble-arrow.png") no-repeat center center;
  background-size: 100%;
}
.blocks-events .more-events {
  border-top: 1px solid #d4d4d4;
  margin-top: 50px;
  padding-top: 30px;
}
.blocks-events .more-events a {
  font-size: 18px;
  line-height: 32px;
}

.bird-small {
  background-color: #faf9f5;
  padding: 10px 0;
}

.interactive-guide .preamble {
  text-align: left;
  margin-bottom: 15px;
}

.bird-guide-country {
  width: 50%;
  float: left;
  padding: 0 10px;
}
.bird-guide-country select {
  margin-top: 0px;
  line-height: 1;
  width: 100%;
}

.bird-guide-zip-input {
  width: 30%;
  float: left;
  padding: 0 10px 0 0;
}

.btn-submint {
  width: 20%;
  padding: 0 0 0 10px;
  float: left;
}
.btn-submint .bird-guide-zip-submit {
  width: 100%;
  height: 40px;
}

@media only screen and (min-width: 768px) {
  .interactive-guide {
    padding-top: 13px;
    padding-bottom: 10px;
  }
}

.static-page-content .deck {
  padding-bottom: 1em;
}
.static-page-content .text-container .deck {
  padding-bottom: 0;
}

h2.grey {
  color: #838078;
}

.pager-load-more {
  list-style: none;
  list-style-image: none;
  list-style-type: none;
}

.search-tag {
  background-color: #fdf7da;
}

.top-search-form {
  margin-top: 65px;
}

.top-search-form-input {
  float: left;
  margin-right: 2%;
  width: 85%;
}
.top-search-form-input input {
  font-size: 30px;
  font-weight: 300;
  height: 47px;
}

.top-search-form-submit {
  height: 47px;
  flex: left;
  font-size: 24px;
  font-weight: 300;
  width: 13%;
}

.filter-list {
  font-family: "Source Sans Pro", Verdana, sans-serif;
  font-size: 20px;
  list-style-type: none;
  margin-bottom: 35px;
  padding-left: 30px;
}
.filter-list li {
  margin-bottom: 5px;
}
.filter-list a.active {
  color: #000;
}
.filter-list.section-nav {
  margin: 0;
  padding: 0;
}
.filter-list.section-nav span {
  color: #89867e;
  margin-right: 5px;
  vertical-align: middle;
}

.filter-list-heading {
  margin-bottom: 5px;
}

.our-leadership-card {
  padding-bottom: 30px;
}
.our-leadership-card .photo {
  border: 1px solid #EEEEEE;
}
.our-leadership-card .photo a {
  line-height: 0;
  display: block;
}
.our-leadership-card .photo img {
  width: 100%;
  height: auto;
  line-height: 0;
}
.our-leadership-card .common-name {
  margin-top: 10px;
  margin-bottom: 0;
}
.our-leadership-card .post-title {
  font-family: "Source Sans Pro", Verdana, sans-serif;
  letter-spacing: -0.35px;
}
@media only screen and (max-width: 479px) {
  .our-leadership-card .post-title {
    font-size: 15px;
    line-height: 20px;
  }
}
/* ... */

